k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cyberminions-service

spec:
  type: NodePort

  selector:
    app: cyberminions

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
